# docs/api/api.yaml
@@ -62,13 +62,13 @@ paths:
   /v1/products/attributes:
     post:
       operationId: update-product-attribute
-      description: Update an attribute of the product
+      description: Update a set of product attributes
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UpdateProductAttributeRequest'
+              $ref: '#/components/schemas/UpdateProductAttributeListRequest'
       responses:
         200:
           description: Success
@@ -77,16 +77,57 @@ paths:
       security:
         - api_key: []
 
-  /v1/products/status:
+  /v1/products/{id}/publish:
     post:
-      operationId: update-product-status
-      description: Update the status of a product
+      operationId: "publish-product"
+      description: Publish a product
+      parameters:
+        - in: path
+          name: id
+          description: ID of the product
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: Success
+      tags:
+        - Product
+      security:
+        - api_key: []
+
+
+  /v1/products/{id}/unpublish:
+    post:
+      operationId: "unpublish-product"
+      description: Unpublish a product
+      parameters:
+        - in: path
+          name: id
+          description: ID of the product
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: Success
+      tags:
+        - Product
+      security:
+        - api_key: []
+
+  /v1/products/import:
+    post:
+      operationId: import-product
+      description: Import products
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UpdateProductStatusRequest'
+              $ref: '#/components/schemas/ImportProductRequest'
       responses:
         200:
           description: Success
@@ -184,6 +225,7 @@ components:
         pictureUrl:
           type: string
           description: Product title
+          nullable: true
         categoryId:
           type: integer
           format: int64
@@ -191,7 +233,6 @@ components:
         title:
           type: string
           description: Product title
-          nullable: true
         summary:
           type: string
           description: Product summary
@@ -201,8 +242,12 @@ components:
           format: int64
           description: Price of the product
           nullable: true
+        quantity:
+          type: integer
+          description: Quantity in stock
+          nullable: true
       required:
-        - pictureUrl
+        - title
 
     CreateProductResponse:
       type: object
@@ -212,38 +257,36 @@ components:
           format: int64
           description: ID of the product created
 
-    UpdateProductAttributeRequest:
+    UpdateProductAttributeListRequest:
       type: object
       properties:
-        productId:
-          type: integer
-          format: int64
-          description: ID of the product to update
+        attributes:
+          type: array
+          items:
+            $ref: "#/components/schemas/ProductAttribute"
+      required:
+        - attributes
+
+    ProductAttribute:
+      type: object
+      properties:
         name:
           type: string
-          description: Name of the attribute
+          description: Name of the attribute to update
+          enum:
+            - title
+            - summary
+            - description
+            - price
+            - thumbnail-id
+            - category-id
+            - quantity
         value:
           type: string
           description: Value of the attribute
           nullable: true
       required:
         - name
-
-    UpdateProductStatusRequest:
-      type: object
-      properties:
-        productId:
-          type: integer
-          format: int64
-          description: ID of the product to update
-        status:
-          type: string
-          description: Name of the attribute
-          enum:
-            - DRAFT
-            - PUBLISHED
-      required:
-        - status
 
     AddPictureRequest:
       type: object
@@ -265,3 +308,13 @@ components:
           type: integer
           format: int64
           description: ID of the picture
+
+    ImportProductRequest:
+      type: object
+      properties:
+        url:
+          type: string
+          description: URL of CSV file
+      required:
+        - url
+
